--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<p>hello world</p>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Cashflow - Submission System</title>
@@ -61,9 +59,6 @@
         </div>
         <ul>
             <li><a href="javascript:void(0)" onclick="showSection('dashboard')"><i class="fa-solid fa-house"></i><span class="text">Dashboard</span></a></li>
-            <li><a href="javascript:void(0)" onclick="showSection('expense-page')"><i class="fas fa-file-alt"></i><span class="text">Manage Expense</span></a></li>
-            <li><a href="javascript:void(0)" onclick="showSection('income-page')"><i class="fas fa-file-invoice-dollar"></i><span class="text">Manage Income</span></a></li>
-            <li><a href="javascript:void(0)" onclick="location.reload()"><i class="fas fa-sign-out-alt"></i><span class="text">Logout</span></a></li>
             <li><a href="javascript:openCashEntry()"><i class="fas fa-file-alt"></i><span class="text">Manage cash entry</span></a></li>
             <li><a href="javascript:void(0)" onclick="showSection('budget-page')"><i class="fas fa-wallet"></i> <span class="text">Manage Budget</span> </a></li>
             <li><a href="javascript:void(0)" onclick="showSection('report-page')"><i class="fas fa-paper-plane"></i><span class="text" id="report-link-text">Reports</span></a></li>
@@ -82,7 +77,7 @@
                 <div class="summary-card dark-espresso" id="balance-card"><h4>Current Balance</h4><p id="card-remaining">$0</p></div>
                 <div class="summary-card caramel-brown"><h4>Total Expenses</h4><p id="card-total">$0</p></div>
                 <div class="summary-card mocha-light"><h4>Total Income</h4><p id="card-income">$0</p></div>
-                <div class="summary-card mocha-light"><h4>Budget</h4><p id="card-income">$1000000</p></div>
+                <div class="summary-card mocha-light"><h4>Budget</h4><p id="card-budget">$1000000</p></div>
             </div>
             <div class="table-container">
                 <h3>Recent Activity</h3>
@@ -92,106 +87,22 @@
                 </table>
             </div>
         </div>
-<!--expense-->
-        <div id="expense-page" class="page-section">
-            <div class="manage-expense-card">
-                <h2 style="color: #3e2723;"><i class="fas fa-plus-circle"></i> Input Daily Expense Records</h2>
-                <div class="action-bar" style="margin: 20px 0; display: flex; gap: 10px;">
-                    <button class="btn-action btn-new" onclick="addNewRow()">+ Add Row</button>
-                    <button class="btn-action btn-del" id="master-del-btn" onclick="deleteSelectedRows()">Remove Selected</button>
-                </div>
-                <form id="bulkExpenseForm" onsubmit="saveFromPage(event)">
-                    <table class="premium-table">
-                        <thead>
-                            <tr>
-                                <th style="width: 40px;"><input type="checkbox" id="selectAll" onclick="toggleSelectAll(this)"></th>
-                                <th>Description</th><th>Category</th><th>Date</th><th>Payer</th><th>Amount ($)</th>
-                            </tr>
-                        </thead>
-                        <tbody id="input-rows"></tbody>
-                    </table>
-                    <div style="margin-top: 30px; text-align: right;">
-                        <button type="submit" class="btn-action btn-save">Confirm & Save Entries</button>
-                    </div>
-                </form>
+<!--expense removed-->
+<!--income removed-->
 
-                <hr style="margin: 50px 0; border: 0; border-top: 2px dashed #ddd;">
-                <h2 style="color: #3e2723;"><i class="fas fa-history"></i> Current Expense Records</h2>
-                <div class="table-container">
-                    <table class="premium-table">
-                        <thead>
-                            <tr>
-                                <th style="width: 40px;"></th>
-                                <th>Description</th><th>Category</th><th>Date</th><th>Payer</th><th>Amount</th><th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody id="history-rows-manage"></tbody>
-                    </table>
+        <div id="budget-page" class="page-section">
+            <header class="dash-header">
+                <h1>Manage Budget</h1>
+            </header>
+            <div class="card">
+                <h3>Budget Overview</h3>
+                <p>Budget management features are currently under development.</p>
+                <div class="summary-card mocha-light" style="max-width: 300px; margin-top: 20px;">
+                    <h4>Current Budget</h4>
+                    <p>$1,000,000</p>
                 </div>
             </div>
-        </div><!--expense-->
-        <!--income-->
-         <div id="income-page" class="page-section">
-    <div class="manage-income-card">
-        <h2 style="color: #3e2723;">
-            <i class="fas fa-plus-circle"></i> Input Daily Income Records
-        </h2>
-
-        <div class="action-bar" style="margin: 20px 0; display: flex; gap: 10px;">
-            <button class="btn-action btn-new" onclick="addNewIncomeRow()">+ Add Row</button>
-            <button class="btn-action btn-del" id="master-del-btn" onclick="deleteSelectedIncomeRows()">Remove Selected</button>
         </div>
-
-        <form id="bulkIncomeForm" onsubmit="saveIncomeFromPage(event)">
-            <table class="premium-table">
-                <thead>
-                    <tr>
-                        <th style="width: 40px;">
-                            <input type="checkbox" id="selectAllIncome" onclick="toggleSelectAllIncome(this)">
-                        </th>
-                        <th>Description</th>
-                        <th>Category</th>
-                        <th>Date</th>
-                        <th>Receiver</th>
-                        <th>Amount ($)</th>
-        
-                    </tr>
-                </thead>
-                <tbody id="income-input-rows"></tbody>
-            </table>
-
-            <div style="margin-top: 30px; text-align: right;">
-                <button type="submit" class="btn-action btn-save">
-                    Confirm & Save Income
-                </button>
-            </div>
-        </form>
-
-        <hr style="margin: 50px 0; border: 0; border-top: 2px dashed #ddd;">
-
-        <h2 style="color: #3e2723;">
-            <i class="fas fa-history"></i> Current Income Records
-        </h2>
-
-        <div class="table-container">
-            <table class="premium-table">
-                <thead>
-                    <tr>
-                        <th style="width: 40px;"></th>
-                        <th>Description</th>
-                        <th>Category</th>
-                        <th>Date</th>
-                        <th>Receiver</th>
-                        <th>Amount</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody id="income-history-rows"></tbody>
-            </table>
-        </div>
-    </div>
-</div>
-<!--income-->
 
         <div id="report-page" class="page-section">
             <div class="report-container" id="report-content-area">
@@ -200,20 +111,30 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="newscript.js"></script>
-</body>
-</html>
-
-    <script src="newscript.js"></script>
     <script>
     function openCashEntry() {
         const role = localStorage.getItem('coffee_user_role') || 'sale';
-        window.location.href = `http://127.0.0.1:5003/?role=${role}`;
+        const origin = window.location.origin;
+        window.location.href = `http://127.0.0.1:5003/?role=${role}&origin=${encodeURIComponent(origin)}`;
     }
 
     function logout() {
         localStorage.removeItem('coffee_user_role');
-        location.reload();
+        window.location.href = '/';
     }
+
+    window.onload = function() {
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.get('action') === 'logout') {
+            logout();
+        } else if (window.location.hash) {
+            // Ensure section is shown if hash exists (fallback for race conditions)
+            const section = window.location.hash.substring(1);
+            if (typeof showSection === 'function') {
+                setTimeout(() => showSection(section), 100);
+            }
+        }
+    };
 </script>
 
 </body>
