Overall budget form limitation finished

--- a/category_budget.html
+++ b/category_budget.html
@@ -16,6 +16,16 @@
             background: #fff7cc;
             color: #2c3e50;
         }
+        #budget_month {
+    background-color: #d4edda;
+    border: 1px solid #28a745;
+    color: #155724;
+}
+#budget_month_filter{
+    background-color: #d4edda;
+    border: 1px solid #28a745;
+    color: #155724;
+}
     </style>
 </head>
 
