Budget Dashboard started

--- a/category_budget.html
+++ b/category_budget.html
@@ -143,8 +143,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="newscript.js"></script>
-    <script src="budget.js?v=2"></script>
+    <script src="newscript.js?v=3"></script>
+    <script src="budget.js?v=3"></script>
     <script>
         // Initialize the category budget page
         document.addEventListener('DOMContentLoaded', function() {
