--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
  
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="newscript.js"></script>
-    <script src="budget_script.js"></script>
-    <script src="budget.js"></script>
-    <script src="company_budget.js"></script>
+    <script src="newscript.js?v=3"></script>
+    <script src="budget_script.js?v=3"></script>
+    <script src="budget.js?v=3"></script>
+    <script src="company_budget.js?v=3"></script>
     <script>
     function openCashEntry() {
         const role = localStorage.getItem('coffee_user_role') || 'sale';
