--- a/overall_budget.html
+++ b/overall_budget.html
@@ -111,7 +111,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="newscript.js"></script>
+    <script src="newscript.js?v=3"></script>
     <script>
         // Inline: set month limits so they work even when page is served by backend (no dependency on overall_budget.js load)
         (function() {
@@ -142,7 +142,7 @@
         })();
     </script>
 
-            <script src="overall_budget.js?v=2"></script>
+            <script src="overall_budget.js?v=3"></script>
     <script>
         // Inline: sync filter and table when form month changes (works even if overall_budget.js is cached on localhost)
         document.addEventListener('DOMContentLoaded', function() {
